welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: '=' expected but ';' found.
	val w=-1;
                ^